syntax = "proto3";

package org.project_planton.provider.digitalocean.digitaloceanvolume.v1;

import "buf/validate/validate.proto";
import "org/project_planton/provider/digitalocean/region.proto";

// DigitalOceanVolumeSpec defines the specification required to create a DigitalOcean block storage volume.
// A block storage volume provides expandable storage that can be attached to Droplets.
// This specification focuses on essential parameters for volume creation, adhering to the 80/20 principle.
message DigitalOceanVolumeSpec {
  // The name of the volume. Must be lowercase letters, numbers, and hyphens only,
  // starting with a letter and ending with a letter or number. Maximum 64 characters.
  string volume_name = 1 [
    (buf.validate.field).string.pattern = "^[a-z]([a-z0-9-]*[a-z0-9])?$",
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 64,
    (buf.validate.field).required = true
  ];

  // An optional description for the volume.
  // Constraints: Maximum 100 characters.
  string description = 2 [(buf.validate.field).string.max_len = 100];

  // The DigitalOcean region where the volume will be created.
  // Must match the region of any Droplet that will attach to this volume.
  DigitalOceanRegion region = 3 [(buf.validate.field).required = true];

  // The size of the volume in GiB.
  // Constraints: between 1 and 16000 (inclusive).
  uint32 size_gib = 4 [
    (buf.validate.field).uint32.gte = 1,
    (buf.validate.field).uint32.lte = 16000,
    (buf.validate.field).required = true
  ];

  // The initial filesystem to format the volume with.
  // Allowed values: ext4, xfs, or none (no pre-formatting). Default is none.
  DigitalOceanVolumeFilesystemType filesystem_type = 5;

  // An optional snapshot ID or reference to a volume snapshot to create this volume from.
  // If provided, the new volume will be created from the given snapshot (inheriting its region and minimum size).
  string snapshot_id = 6;

  // A list of tags to apply to the volume.
  // Tags must be unique and consist of letters, numbers, colons, dashes, or underscores.
  repeated string tags = 7 [
    (buf.validate.field).repeated.unique = true,
    (buf.validate.field).repeated.items.string.max_len = 64,
    (buf.validate.field).repeated.items.string.pattern = "^[A-Za-z0-9:_-]+$"
  ];
}

// Supported filesystem types for formatting a DigitalOcean volume.
// Values match DigitalOcean API expected strings.
enum DigitalOceanVolumeFilesystemType {
  unformatted = 0; // Do not format the volume (leave unformatted).
  ext4 = 1; // Format the volume with an ext4 filesystem.
  xfs = 2; // Format the volume with an XFS filesystem.
}
